force-app/main/default/objects/OrderItemSummary/fields/GiftCertificateNumber__c.field-meta.xml
<CustomField>
    <fullName>GiftCertificateNumber__c</fullName>
    <label>GiftCertificateNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>