force-app/main/default/objects/OrderItemSummary/fields/Is_Exchange__c.field-meta.xml
<CustomField>
    <fullName>Is_Exchange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Exchange</label>
    <type>Checkbox</type>
</CustomField>