force-app/main/default/objects/OrderItemSummary/fields/productImageURL__c.field-meta.xml
<CustomField>
    <fullName>productImageURL__c</fullName>
    <label>productImageURL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>