force-app/main/default/objects/OrderItemSummary/fields/productLinkURL__c.field-meta.xml
<CustomField>
    <fullName>productLinkURL__c</fullName>
    <label>productLinkURL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>