force-app/main/default/objects/OrderItemSummary/fields/Reship_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Reship_Reasons__c</fullName>
    <label>Reship Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wrong item</fullName>
            </value>
            <value>
                <fullName>Wrong Quantity</fullName>
            </value>
            <value>
                <fullName>Missing Item</fullName>
            </value>
            <value>
                <fullName>Short Count</fullName>
            </value>
            <value>
                <fullName>Lost Package</fullName>
            </value>
            <value>
                <fullName>Damaged Item</fullName>
            </value>
            <value>
                <fullName>Order Entry Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>