force-app/main/default/objects/OrderItemSummary/fields/Reship_Status__c.field-meta.xml
<CustomField>
    <fullName>Reship_Status__c</fullName>
    <label>Reship Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>